# SaddlePoint-Whitebox

./: .gitignore  README.md  pyproject.toml
docs/: HESSIAN_UPDATE_ROADMAP.md  LAYER_C_STRATEGY.md  TOPOLOGY_VALIDATION.md
scripts/: generate_topology_dataset.py  run_topology_diagnostics.py  validate_topology_model.py
src/saddlepoint_whitebox/: __init__.py  benchmarks.py  calculus.py  classification.py  dataset_generation.py  diagnostics.py  evf.py  finite_difference.py  instrumentation.py  labels.py  matrix.py  minimizers.py  optimizers.py  physical_models.py  surfaces.py  topology_models.py  topology_validation.py
tests/: test_benchmarks.py  test_calculus.py  test_classification.py  test_dataset_generation.py  test_diagnostics.py  test_eigendecomposition.py  test_evf.py  test_finite_difference.py  test_instrumentation.py  test_labels.py  test_matrix.py  test_minimizers.py  test_optimizers.py  test_physical_models.py  test_surfaces.py  test_topology_models.py  test_topology_validation.py
