[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "saddlepoint-whitebox"
version = "0.1.0"
description = "White-box tools for potential energy surface navigation."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Don Samuel Aborah" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Mathematics"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
saddlepoint_whitebox = ["py.typed"]
